--- a/backend/cmd/app/.env
+++ b/backend/cmd/app/.env
@@ -1,1 +1,2 @@
 DNS = "host=localhost user=postgres password=wewe123123 dbname=Redbook port=5432 sslmode=disable"
+JWT_SECRET_KEY = "SL+ecPxuHiDJmWd9BPubhYg3RgzCw4cPB79JHSx+HI8="
