--- a/backend/cmd/app/.env
+++ b/backend/cmd/app/.env
@@ -1,1 +1,1 @@
-DNS = "host=localhost user=postgres password=wewe123123 dbname=Redbook port=5432 sslmode=disable"
+DNS = "root:@tcp(127.0.0.1:3306)/Redbook?charset=utf8mb4&parseTime=True&loc=Local"
